--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/alantsui5/typescript-cli-template.git"
-},
+  },
   "author": "Alan Tsui",
   "license": "MIT",
   "devDependencies": {
@@ -26,5 +26,8 @@
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "@types/node": "^14.0.14"
   }
 }
