--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint": "^7.3.1",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "lodash": ">=4.17.19"
   },
   "dependencies": {
     "@types/node": "^14.0.14"
