--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
       "target": "es5",
-      "lib": ["dom", "dom.iterable", "esnext"],
+      "lib": ["es6", "dom", "dom.iterable", "esnext"],
       "allowJs": true,
       "skipLibCheck": true,
       "strict": false,
       "forceConsistentCasingInFileNames": true,
       "noEmit": true,
       "esModuleInterop": true,
-      "module": "esnext",
+      "module": "commonjs",
       "moduleResolution": "node",
       "resolveJsonModule": true,
     },
